@@ -9,6 +9,10 @@
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
         android:title="@string/clear_cache" />
     <item
+        android:id="@+id/menu_clear_completed_cache"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:title="@string/clear_completed_cache" />
+    <item
         android:id="@+id/menu_change_sort_order"
         android:icon="@android:drawable/ic_menu_sort_alphabetically"
         android:title="@string/sc_sortorder_change" />
